--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.h2.console.enabled=true
+logging.level.org.hibernate.SQL=DEBUG
 spring.h2.console.path=/h2-console
 spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
