added the projects count on home.html

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ logging.level.org.hibernate.SQL=DEBUG
 spring.h2.console.path=/h2-console
 spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
+server.port=8081
