--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
-spring.h2.console.enabled=true
-logging.level.org.hibernate.SQL=DEBUG
-spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:postgresql://localhost:5432/project-management
+spring.datasource.username=
+spring.datasource.password=
+
+spring.datasource.initialization-mode=never
+
+spring.jpa.hibernate.ddl-auto=none
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
 spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
-server.port=8081
-version=0.1.0
+version=3.0.0
