--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,5 +5,5 @@ spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
 server.port=8081
 version=3.3.3
-#jdbc.url=jdbc:h2:mem:test:MODE=PostgreSQL:DB_CLOSE_DELAY=-1
+jdbc.url=jdbc:h2:mem:test:MODE=PostgreSQL:DB_CLOSE_DELAY=-1
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL92Dialect
