added system variables for user pass and db.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/project-management
-spring.datasource.username=
-spring.datasource.password=
+#spring.datasource.url=jdbc:postgresql://localhost:5432/project-management
+spring.datasource.url=${jdbcurl}
+spring.datasource.username=${dbuser}
+spring.datasource.password=${dbpass}
 
 spring.datasource.initialization-mode=never
 
