added the service layer for decoupling the repository from controolers.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
-version=3.0.0
+version=${version}
